# FuzzyOps

./: .gitignore  .readthedocs.yml  CONTRIBUTING.txt  DOCUMENTATION.md  LICENSE  MANIFEST.in  Makefile  README.md  doc_reqs.txt  ex3.cpp  fan.html  fuzzy_graphs.html  fuzzy_opt.html  graphs.html  main.py  objects.inv  requirements.txt  setup.cfg  setup.py
.gihub/workflows/: ci_cd.yml
.github/workflows/: ci_cd.yml
.history/: Makefile_20250205161643  Makefile_20250205161648  Makefile_20250205161702  Makefile_20250205161733  Makefile_20250205161829  Makefile_20250205161910  Makefile_20250205161922  Makefile_20250205161925  Makefile_20250205163306  Makefile_20250205163547  Makefile_20250205163548  Makefile_20250205163657  Makefile_20250205163708  Makefile_20250205163825  Makefile_20250205163827  Makefile_20250205164057  Makefile_20250205164132  Makefile_20250205165909  Makefile_20250205170038  Makefile_20250205170040  Makefile_20250205170044  Makefile_20250205170126  Makefile_20250205170128  Makefile_20250205180701  Makefile_20250205181548  Makefile_20250205181558  Makefile_20250205181623  Makefile_20250205182233  Makefile_20250205191023  Makefile_20250205191024  Makefile_20250205191036  Makefile_20250205191045  Makefile_20250205191048  Makefile_20250205191056  ex2_20250205203000.cpp  ex2_20250205203007.cpp  ex2_20250205203008.cpp  ex2_20250205203025.cpp  ex2_20250205203033.cpp  ex2_20250205203042.cpp  (+79 more)
.history/src/: ex_20250205182422.cpp  ex_20250205182851.cpp  ex_20250205182853.cpp  ex_20250205183036.cpp  ex_20250205183039.cpp  ex_20250205183043.cpp  ex_20250205183123.cpp  ex_20250205183126.cpp  ex_20250205183241.cpp  ex_20250205183243.cpp  ex_20250205183245.cpp  ex_20250205183606.cpp
_sources/: fan.rst.txt  fuzzy_graphs.rst.txt  fuzzy_logic.rst.txt  fuzzy_meta_opt.rst.txt  fuzzy_numbers.rst.txt  fuzzy_opt.rst.txt  graph_algs.rst.txt
cpp/: Makefile  README.md  fan_ex.cpp  fan_ex.py  fuzzy_logic_ex.cpp  fuzzy_logic_ex.py  fuzzy_metaev_opt_ex.py  fuzzy_nn_ex.cpp  fuzzy_nn_ex.py  fuzzy_numbers_ex.cpp  fuzzy_numbers_ex.py  linear_opt_ex.cpp  linear_opt_ex.py
docs/: fuzzy_logic.html  fuzzy_nn.html  graph_algs.html  index.html
docs/_sources/: fuzzy_neural_net.rst.txt  prediction.rst.txt  seq.rst.txt
examples/: fuzzy_fan_example.py  fuzzy_graph_alg_example.py  fuzzy_graph_algorithm_ex.py  fuzzy_graph_ex.py  fuzzy_linear_opt.py  fuzzy_linear_opt_example.py  fuzzy_logic_example.py  fuzzy_logic_example2.py  fuzzy_mca_ex.py  fuzzy_mca_example.py  fuzzy_metaev_opt.py  fuzzy_metaev_opt_example.py  fuzzy_network_ex.py  fuzzy_nn_example.py  fuzzy_number_ex.py  fuzzy_numbers_example.py  fuzzy_prediction.py  fuzzy_sequencing_assignment.py  fuzzy_sequencing_assignment_ex.py  some_example.py
examples/common/: assignment.py  (+11 more)
requirements/: win.txt
src/: .gitignore  .readthedocs.yml  __init__.py  main.py  requirements.txt
(+216 files in other folders)
