; [project]
; name = fuzzyops
; version = 1.0.0
; description = fuzzy math library
; long_description = file: README.md
; long_description_content_type = text/markdown
; classifiers =
;     Programming Language :: Python :: 3
;     Operating System :: OS Independent
;
; [options]
; python_requires = >=3.10
; include_package_data = True
; package_dir=
;     =src
; packages=find:
; install_requires =
;
;     setuptools>=60.2.0
;     numpy>=1.23.4
;     matplotlib>=3.6.2
;
; [options.extras_require]
; win =
; torch>=2.0.0
; ; [easy_install]
; ; index-url = https://download.pytorch.org/whl/cu117
;
; macos =
; torch>=2.0.0
;
; unix =
; torch>=2.0.0
;
; [options.packages.find]
; where=src