[project]
name = fuzzyops
version = 1.0.0
description = fuzzy math library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =

    setuptools>=60.2.0
    numpy>=1.23.4
    matplotlib>=3.6.2
    pandas>=2.1.0
    uncertainties>=3.1.7
    torch>=2.0.0
    scikit-learn>=1.4.1

[options.packages.find]
where=src