[metadata]
name = fuzzyops
version = 1.0.15
description = Fuzzy math library
long_description = file: README.md
long_description_content_type = text/markdown
author = Kotya2001
author_email = your_email@example.com
url = https://github.com/Kotya2001/FuzzyOps
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Documentation = https://fuzzyops.readthedocs.io/en/latest/
    Tutorial = https://github.com/Kotya2001/FuzzyOps/wiki/Instructions-for-using-the-FuzzyOps-library



[project]
name = fuzzyops
version = 1.0.15
description = fuzzy math library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kotya2001/FuzzyOps
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
readme = README.md  # Обязательно указываем файл README


[options]
python_requires = >=3.10
include_package_data = True
packages=find:
package_dir=
    =src
install_requires =

    setuptools>=60.2.0
    numpy>=1.23.4
    matplotlib>=3.6.2
    pandas>=2.1.0
    uncertainties>=3.1.7
    torch>=2.0.0
    scikit-learn>=1.4.1
    cvxpy>=1.6.0
    scipy>=1.11.2
    numba>=0.56.4

; [options.packages.find]
; where=src

[options.packages.find]
where = src

; [options.data_files]
; tests = fuzzyops/tests  # Включаем тесты в дистрибуцию%
